--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+li {
+  list-style: circle;
+  background-color: rgba(243, 237, 243, 0.937);
+}
